# trctl

./: .clang-format  .envrc  CMakeLists.txt  CMakePresets.json  iface.proto
src/: client.cpp  client.hpp  cobs.hpp  fs.hpp  iface.cpp  iface.hpp  npb.hpp  npb_extra.h  server.cpp  server.hpp  str.hpp  task.hpp  util.cpp  util.hpp
src/hub/: main.cpp
src/test/: fs_utest.cpp  npb_utest.cpp  server_utest.cpp  tutil.hpp
src/unit/: folder.hpp  fs_transfer.hpp  main.cpp  process.hpp  unit.hpp
src/unit/test/: inpt.txt  inpt_utest.cpp
src/unit/test/data/: build.sh  config.json  data.csv  test.sh
src/util/: async_optional.hpp  async_queue.hpp  async_sender_fifo.hpp  async_storage.hpp
src/util/test/: async_storage_utest.cpp
